--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,5 +33,10 @@ Suggests:
     rmarkdown,
     ggplot2
 VignetteBuilder: knitr
+Remotes:
+    Traderverse/tradeio,
+    Traderverse/tradefeatures,
+    Traderverse/tradeviz,
+    Traderverse/trademetrics
 URL: https://github.com/tradingverse/tradeengine
 BugReports: https://github.com/tradingverse/tradeengine/issues
