--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,5 +22,6 @@ importFrom(lubridate,as_datetime)
 importFrom(purrr,map)
 importFrom(purrr,map_dbl)
 importFrom(rlang,.data)
+importFrom(rlang,enquo)
+importFrom(rlang,eval_tidy)
 importFrom(tibble,tibble)
-importFrom(tidyr,fill)
