--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -41,35 +41,8 @@ navbar:
       href: https://twitter.com/traderverse
 
 reference:
-- title: "Core Backtesting Functions"
-  desc: "Main functions for running backtests"
-  contents:
-  - backtest
-  - create_strategy
-  - add_signal
-  
-- title: "Portfolio Functions"
-  desc: "Portfolio construction and management"
-  contents:
-  - portfolio
-  - rebalance
-  - position_size
-  
-- title: "Analysis Functions"
-  desc: "Analyze backtest results"
-  contents:
-  - analyze_results
-  - summary.backtest
-  
-- title: "Data Structures"
-  desc: "Core data structures"
-  contents:
-  - market_tbl
-  
-- title: "Utilities"
-  desc: "Helper functions"
-  contents:
-  - starts_with("calc_")
+- title: "All Functions"
+  desc: "Backtesting engine functions"
 
 articles:
 - title: Getting Started
