Fix: Resolve all R CMD check errors and notes
- Fix negative price validation to check all OHLC fields, not just close
- Add stats import for rnorm function
- Remove unused imports (glue, tidyr)
- Add .Rbuildignore entries for non-standard top-level files
- Add .data pronoun for ggplot2 NSE to eliminate warnings
- Remove problematic @name utils documentation
- All 39 tests now pass
- Resolves: 1 ERROR, 4 NOTEs from R CMD check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,12 +21,11 @@ Depends:
 Imports:
     tibble (>= 3.1.0),
     dplyr (>= 1.0.0),
-    tidyr (>= 1.2.0),
     purrr (>= 1.0.0),
     lubridate (>= 1.9.0),
     rlang (>= 1.0.0),
     cli (>= 3.4.0),
-    glue (>= 1.6.0)
+    stats
 Suggests:
     testthat (>= 3.0.0),
     knitr,
