--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,4 +31,5 @@ importFrom(purrr,map_dbl)
 importFrom(rlang,.data)
 importFrom(rlang,enquo)
 importFrom(rlang,eval_tidy)
+importFrom(stats,rnorm)
 importFrom(tibble,tibble)
