--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -14,3 +14,9 @@
 ^\.idea$
 ^cran-comments\.md$
 ^CRAN-RELEASE$
+^CODE_OF_CONDUCT\.md$
+^CONTRIBUTING\.md$
+^SECURITY\.md$
+^QUICKSTART\.md$
+^examples$
+^setup\.R$
