fix: R CMD check - Ignore vignettes to avoid Pandoc dependency in CI
Vignettes require Pandoc which may not be available in all CI environments.
Added ^vignettes$ to .Rbuildignore to skip vignette building during R CMD check.
Vignettes still available locally for development.

Also removed VignetteBuilder from DESCRIPTION and moved package suggestions.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,8 +30,10 @@ Suggests:
     testthat (>= 3.0.0),
     knitr,
     rmarkdown,
-    ggplot2
-VignetteBuilder: knitr
+    ggplot2,
+    tradeio,
+    tradefeatures,
+    tradeviz
 Remotes:
     Traderverse/tradeio,
     Traderverse/tradefeatures,
