fix: Add stats::sd import for trading_session

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,4 +40,5 @@ importFrom(rlang,.data)
 importFrom(rlang,enquo)
 importFrom(rlang,eval_tidy)
 importFrom(stats,rnorm)
+importFrom(stats,sd)
 importFrom(tibble,tibble)
