fix: Declare patchwork and tradedash in Suggests, remove plot_trades
Fixed R CMD check WARNING:
- Added patchwork and tradedash to Suggests in DESCRIPTION
- Removed plot_trades call (function doesn't exist in tradeviz)
- Updated plot.trading_session to only use existing functions
- Removed 'trades' type from plot options

Status: 0 errors, 0 warnings, 3 benign notes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,9 @@ Suggests:
     ggplot2,
     tradeio,
     tradefeatures,
-    tradeviz
+    tradeviz,
+    tradedash,
+    patchwork
 Remotes:
     Traderverse/tradeio,
     Traderverse/tradefeatures,
