--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -38,11 +38,10 @@ jobs:
       - name: Install Traderverse dependencies from GitHub
         run: |
           install.packages("remotes")
-          remotes::install_github("Traderverse/tradeengine", upgrade = "never")
+          remotes::install_github("Traderverse/tradedash", upgrade = "never")
           remotes::install_github("Traderverse/tradeio", upgrade = "never")
           remotes::install_github("Traderverse/tradefeatures", upgrade = "never")
           remotes::install_github("Traderverse/tradeviz", upgrade = "never")
-          remotes::install_github("Traderverse/trademetrics", upgrade = "never")
         shell: Rscript {0}
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
