fix: Remove circular GitHub dependency installations from workflows
CRITICAL FIX for pak errors:
- Removed manual remotes::install_github() steps
- These packages are in Suggests (optional), not Imports (required)
- Let setup-r-dependencies handle only hard dependencies
- Removed Remotes field from DESCRIPTION (no GitHub installs needed)
- Added dependencies: '"hard"' to only install required deps

This prevents pak from trying to install packages that don't exist yet
or create circular dependency chains during R CMD check.

--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -34,19 +34,11 @@ jobs:
           r-version: ${{ matrix.config.r }}
           use-public-rspm: true
       
-      
-      - name: Install Traderverse dependencies from GitHub
-        run: |
-          install.packages("remotes")
-          remotes::install_github("Traderverse/tradedash", upgrade = "never")
-          remotes::install_github("Traderverse/tradeio", upgrade = "never")
-          remotes::install_github("Traderverse/tradefeatures", upgrade = "never")
-          remotes::install_github("Traderverse/tradeviz", upgrade = "never")
-        shell: Rscript {0}
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
           needs: check
+          dependencies: '"hard"'
       
       - uses: r-lib/actions/check-r-package@v2
         with:
